--- a/src/anyang-1.0/jade/views/organization-pfta/enter-manage-list.jade
+++ b/src/anyang-1.0/jade/views/organization-pfta/enter-manage-list.jade
@@ -50,7 +50,7 @@
                .col-md-4.text-left
                   .btn-toolbar
                      .btn-group
-                        a.btn.btn-primary.btn-sm(title="{{'button.ADD'|translate}}",ng-click="vm.add()")
+                        a.btn.btn-primary.btn-sm(title="{{'button.ADD'|translate}}",ng-click="vm.addEx()")
                            i.glyphicon.glyphicon-plus
                         a.btn.btn-primary.btn-sm(title="{{'button.REMOVE'|translate}}",ng-click="vm.disable(vm.disableEnterRelatedAction)")
                            i.glyphicon.glyphicon-minus
