--- a/src/anyang-1.0/jade/views/organization-pfta/financial-recharge-details.jade
+++ b/src/anyang-1.0/jade/views/organization-pfta/financial-recharge-details.jade
@@ -45,9 +45,66 @@ form.form-validate.mb-lg(role='form', name="theForm", novalidate='', ng-submit="
                             textarea.form-control(name='remark',ng-model='vm.model.remark',placeholder='{{vm.viewTranslatePath("TAB1-PLACEHOLDER-REMARK")|translate}}',maxlength="400")
                         .col-md-10(ng-if="vm.readonly")
                             .form-readable {{vm.model.remark}}
+                    .panel.panel-default.panel-grid(ng-if="vm.readonly && vm.hadRededToRecharge")
+                        .panel-heading-normal
+                            a {{ vm.viewTranslatePath('TAB1-REDED-TO-RECHARGE') | translate}}
+                        table.grid.table.table-bordered.table-hover.table-striped
+                            thead
+                                tr
+                                    th.text-center(width="80")
+                                        | {{ vm.viewTranslatePath('TAB1-REDED-TO-RECHARGE-CHECK_IN_TIME') | translate}}
+                                    th.text-center(width="40")
+                                        | {{ vm.viewTranslatePath('TAB1-REDED-TO-RECHARGE-VOUCHER_NO') | translate}}
+                                    th.text-center(width="40")
+                                        | {{ vm.viewTranslatePath('TAB1-REDED-TO-RECHARGE-AMOUNT') | translate}}
+                                    th.text-center(width="200")
+                                        | {{ vm.viewTranslatePath('TAB1-REDED-TO-RECHARGE-REMARK') | translate}}
+                            tbody
+                                tr(ng-repeat="row in vm.rededToRecharge|orderBy:'-check_in_time'")
+                                    td.text-center {{::row.check_in_time|date:'yyyy-MM-dd HH:mm:ss'}}
+                                    td.text-center {{::row.voucher_no}}
+                                    td.text-right.text-danger {{::row.amount|currency}}
+                                    td {{::row.remark}}
+                        .panel-footer
     .text-right.mt-lg
-        button.btn.btn-danger.pull-left(ng-if="vm.readonly && vm.itCanDisableOrChange",type="button",ng-click="vm.disableRechargeAndUnbooking()") {{'button.REMOVE'|translate}}
-        button.btn.btn-primary(ng-if="vm.readonly",type="button",ng-click="vm.toEditView()") {{'button.EDIT'|translate}}
+        button.btn.btn-danger.pull-left(ng-if="vm.readonly && !vm.elderlyDisabled && !vm.waiting && vm.itCanDisableOrChange",type="button",ng-click="vm.disableRechargeAndUnbooking()") {{'button.REMOVE'|translate}}
+        button.btn.btn-danger.pull-left(ng-if="vm.readonly && !vm.elderlyDisabled && !vm.waiting && !vm.itCanDisableOrChange",type="button",ng-click="vm.redRecharge()") {{'button.RED'|translate}}
+        button.btn.btn-primary(ng-if="vm.readonly && !vm.elderlyDisabled && !vm.waiting && vm.itCanDisableOrChange",type="button",ng-click="vm.toEditView()") {{'button.EDIT'|translate}}
         button.btn.btn-warning(ng-if="!vm.readonly",type="button",ng-click="vm.cancel()") {{'button.CANCEL'|translate}}
-        button.btn.btn-success(ng-if="!vm.readonly",type="submit") {{'button.SAVE'|translate}}
+        button.btn.btn-success(ng-if="!vm.readonly && !vm.elderlyDisabled && !vm.waiting && vm.itCanDisableOrChange",type="submit") {{'button.SAVE'|translate}}
         button.btn.btn-primary(ng-if="vm.readonly",type="button",ng-click="vm.toListView()") {{'button.RETURN'|translate}}
+
+script(type="text/ng-template", id="do-red-for-recharge.html")
+    form.form-validate.mb-lg(role='form', name="theForm", novalidate='', ng-submit="vm.doSubmit()")
+        .ngdialog-message
+            h3.mt0 {{ vm.title | translate}}
+        .ngdialog-input
+            fieldset: .form-group
+                <!--冲红凭证号-->
+                label.col-md-2.control-label {{ 'label.VOUCHER_NO-TO-RED' | translate}}:
+                .col-md-10
+                    .form-readable {{vm.voucher_no_to_red}}
+            fieldset: .form-group
+                <!--充红金额-->
+                label.col-md-2.control-label {{ 'label.AMOUNT-BOOKING' | translate}}:
+                .col-md-10
+                    .form-readable {{vm.amount_booking}}
+            fieldset: .form-group
+                <!--充红金额-->
+                label.col-md-2.control-label {{ 'label.AMOUNT-TO-RED' | translate}}:
+                .col-md-10
+                    input.form-control(type='number',name='amount' ,ng-model='vm.amount',placeholder="{{'placeholder.AMOUNT-TO-RED' |translate}}", required='' ui-validate="'$value>0'" )
+                    span.text-danger(ng-show="utils.vinput(this.theForm,'amount','required')") {{ "validator.REQUIRED" | translate}}
+                    span.text-danger(ng-show="utils.vinput(this.theForm,'amount','number')") {{ "validator.NUMBER" | translate}}
+                    span.text-danger(ng-show="utils.vinput(this.theForm,'amount','validator')") {{ "validator.MIN" | translate:{min:0.01} }}
+            fieldset: .form-group
+                <!--备注-->
+                label.col-md-2.control-label {{ 'label.REMARK' | translate}}:
+                .col-md-10
+                    textarea.form-control(name='remark',ng-model='vm.remark',placeholder="{{'placeholder.REMARK' |translate}}",maxlength="400")
+        .ngdialog-buttons
+            .alert.alert-danger.text-center(ng-show='vm.authMsg') {{vm.authMsg}}
+            .row
+                .col-md-9
+                .col-md-3
+                    button.btn.btn-success(type='submit') {{ "button.CONFIRM" | translate}}
