--- a/src/anyang-1.0/jade/views/organization-pfta/financial-recharge-list.jade
+++ b/src/anyang-1.0/jade/views/organization-pfta/financial-recharge-list.jade
@@ -39,7 +39,7 @@
                      .btn-group
                         a.btn.btn-primary.btn-xs(title="{{'button.READ'|translate}}",ng-click="vm.read(row._id)")
                            i.glyphicon.glyphicon-search
-                     .btn-group(ng-if="!row.begin_exit_flow")
+                     .btn-group
                         a.btn.btn-primary.btn-xs(title="{{'button.EDIT'|translate}}",ng-click="vm.edit(row._id)")
                            i.glyphicon.glyphicon-pencil
                tr(ng-if="vm.paged.length==0")
