--- a/src/anyang-1.0/jade/views/partials/offsidebar-tab2.jade
+++ b/src/anyang-1.0/jade/views/partials/offsidebar-tab2.jade
@@ -1,7 +1,12 @@
 h3.text-center.text-thin 目标达成
 .col-xs-12
     ul.list-unstyled.workitem
-        li.finished.text-success 重构记账系统，使记账凭证跟着业务。
+        li.finished.text-success 微型机构不需要时间约束，但是收入住老人限额约束目前定额为入住20个老人无限期
+        li.finished.text-success 自定义收费项目及其更改引起的资金变化(2016.7.13-2016.7.18)
+        li.finished.text-success 老人外出、访客接待(2016.7.8-2016.7.12)
+        li.finished.text-success 财务冲红(2016.7.5-2016.7.7)
+        li.finished.text-success 自动月结计划任务(2016.7.4)
+        li.finished.text-success 重构记账系统，使记账凭证跟着业务,账户充值撤销和修改。(2016.7.1-2016.7.3)
         li.finished.text-success 财务记账增加凭证号，后端支持序列,修改所有记账，使支持记账凭证(2016.6.29-2016.6.30)
         li.finished.text-success 老人账户充值(2016.6.27-2016.6.28)
         li.finished.text-success 老人出院手续 复制一些出院老人的快照到出院记录中备查(2016.6.24)
