--- a/src/anyang-1.0/less/subsystem/organization-pfta.less
+++ b/src/anyang-1.0/less/subsystem/organization-pfta.less
@@ -8,4 +8,22 @@
 @import "organization-pfta/enter-manage";
 @import "organization-pfta/in-manage";
 @import "organization-pfta/exit-manage";
-@import "organization-pfta/org-receipts-and-disbursements-details";
+@import "organization-pfta/recharge";
+
+.financial-set-red {
+  color: white;
+  background-color: red;
+}
+
+.financial-voucher_no-for-red {
+  color: red;
+}
+
+.financial-receipts {
+  color: blue;
+}
+
+.financial-disbursements {
+  color: red;
+}
+
