--- a/src/anyang-1.0/jade/views/manage-center/tenant-account-manage-details.jade
+++ b/src/anyang-1.0/jade/views/manage-center/tenant-account-manage-details.jade
@@ -49,6 +49,13 @@ form.form-validate.mb-lg(role='form', name="theForm", novalidate='', ng-submit="
                             span.text-danger(ng-show="utils.vinput(this.theForm,'validate_util','required')") {{ "validator.REQUIRED" | translate}}
                             span.text-danger(ng-show="utils.vinput(this.theForm,'validate_util','date')") {{ "validator.DATE" | translate}}
                     fieldset: .form-group
+                        label.col-md-2.control-label {{ vm.viewTranslatePath('TAB1-LABEL-LIMIT_TO') | translate}}:
+                        .col-md-10
+                            input.form-control(type='number',name='limit_to' ,ng-model='vm.model.limit_to',placeholder='{{vm.viewTranslatePath("TAB1-PLACEHOLDER-LIMIT_TO")|translate}}', required='' ui-validate="'$value>=0'" )
+                            span.text-danger(ng-show="utils.vinput(this.theForm,'limit_to','required')") {{ "validator.REQUIRED" | translate}}
+                            span.text-danger(ng-show="utils.vinput(this.theForm,'limit_to','number')") {{ "validator.NUMBER" | translate}}
+                            span.text-danger(ng-show="utils.vinput(this.theForm,'limit_to','validator')") {{ "validator.MIN" | translate:{min:0} }}
+                    fieldset: .form-group
                         label.col-md-2.control-label {{ vm.viewTranslatePath('TAB1-LABEL-PHONE') | translate}}:
                         .col-md-10
                             input.form-control(type='text',name='phone' , ng-model='vm.model.phone',placeholder='{{vm.viewTranslatePath("TAB1-PLACEHOLDER-PHONE")|translate}}' ,required='',ng-model-options="{debounce:500}",ui-validate="{phone: 'utils.isPhone($value)'}" ,ui-validate-async="{alreadyExists: 'vm.notExist({phone:$value})'}")
