--- a/src/anyang-1.0/jade/views/partials/offsidebar-tab1.jade
+++ b/src/anyang-1.0/jade/views/partials/offsidebar-tab1.jade
@@ -1,9 +1,9 @@
 h3.text-center.text-thin 目标
 .col-xs-12
     ul.list-unstyled.workitem
-        li.text-info 账户充值需要增加撤销和修改
-        li.text-info 财务冲红(2016.7.1-)
-        li.text-info 老人出院手续 冲红、费用清单、打印出院证明
+        li.text-info dashboard
+        li.text-info 代理体系
+        li.text-info 手动月结(等待测试)
         li.text-info 修复租户订单修改时切换租户无法展现树的bug
         li.text-info 租户-收费项目自定义
         li.text-info 租户-系统管理-部门管理
