--- a/src/anyang-1.0/less/app.less
+++ b/src/anyang-1.0/less/app.less
@@ -46,6 +46,8 @@
 @import "app/tree";
 @import "app/box-input";
 @import "app/workitem";
+@import "app/widget";
+@import "app/row-extra";
 
 // Form elements
 @import "app/form-elements";
