dashboard 实现1完成

--- a/src/anyang-1.0/jade/views/partials/offsidebar-tab2.jade
+++ b/src/anyang-1.0/jade/views/partials/offsidebar-tab2.jade
@@ -1,6 +1,7 @@
 h3.text-center.text-thin 目标达成
 .col-xs-12
     ul.list-unstyled.workitem
+        li.finished.text-success dashboard实现[入住总人数,本月新增,入住总人次,主账户,政府补助账户,社会捐赠账户,床位总数,占用数,床位空置率,入住老人年龄分布,近期入住情况,入住房型情况,近期入住房型情况]
         li.finished.text-success 微型机构不需要时间约束，但是收入住老人限额约束目前定额为入住20个老人无限期
         li.finished.text-success 自定义收费项目及其更改引起的资金变化(2016.7.13-2016.7.18)
         li.finished.text-success 老人外出、访客接待(2016.7.8-2016.7.12)
