--- a/src/anyang-1.0/jade/views/organization-pfta/dashboard.jade
+++ b/src/anyang-1.0/jade/views/organization-pfta/dashboard.jade
@@ -98,3 +98,10 @@
       //         span This Month
       //         span.text-dark 1000 Gb
       // END loader widget
+.row
+   .col-lg-6
+      .panel.widget
+         div(ng-if="vm.roomCatagoryOfManTime_loaded",id="{{vm.roomCatagoryOfManTime_id}}",echarts="vm.roomCatagoryOfManTime_id",config="vm.roomCatagoryOfManTime_config",echarts-dimension="'2:1.3'",style="width:100%;")
+   .col-lg-6
+      .panel.widget
+         div(ng-if="vm.roomCatagoryOfManTimeMonthly_loaded",id="{{vm.roomCatagoryOfManTimeMonthly_id}}",echarts="vm.roomCatagoryOfManTimeMonthly_id",config="vm.roomCatagoryOfManTimeMonthly_config",echarts-dimension="'2:1.3'",style="width:100%;")
